--- a/app/views/campsites/_amenities.html.erb
+++ b/app/views/campsites/_amenities.html.erb
@@ -1,20 +1,28 @@
-<div class="amenities">
-  <h3>Amenities</h3>
-  <ul>
-    <li>
-      <i class="fas fa-paw"></i> Pet Friendly
-    </li>
-    <li>
-      <i class="fas fa-wifi"></i> WiFi
-    </li>
-    <li>
-      <i class="fas fa-shower"></i> Showers
-    </li>
-    <li>
-      <i class="fas fa-toilet"></i> Toilet
-    </li>
-    <li>
-      <i class="fas fa-parking"></i> Free Parking
-    </li>
-  </ul>
+<div class="amenities" style="width: 50%;">
+  <h3 class="mb-4">Amenities</h3>
+  <div class="d-flex">
+    <div>
+      <ul>
+        <li>
+          <i class="fas fa-paw"></i> Pet Friendly
+        </li>
+        <li>
+          <i class="fas fa-wifi"></i> WiFi
+        </li>
+        <li>
+          <i class="fas fa-shower"></i> Showers
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li>
+          <i class="fas fa-toilet"></i> Toilet
+        </li>
+        <li>
+          <i class="fas fa-parking"></i> Free Parking
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
