--- a/app/views/campsites/_flat_details.html.erb
+++ b/app/views/campsites/_flat_details.html.erb
@@ -1,9 +1,17 @@
 <div class="flat-details">
-  <h3>Key Info</h3>
-  <ul>
-  <li><i class="fas fa-users"></i> Max Guests: <strong>7</strong></li>
-  <li><i class="fas fa-moon"></i> Minimum Nights: <strong>5</strong></li>
-  <li><i class="fas fa-arrow-right"></i> Check in: <strong>3PM</strong></li>
-  <li><i class="fas fa-arrow-left"></i> Check out: <strong>11AM</strong></li>
-  </ul>
+  <h3 class="mb-4">Key Info</h3>
+  <div class="d-flex">
+    <div>
+      <ul>
+      <li><i class="fas fa-users"></i> Max Guests: <strong>7</strong></li>
+      <li><i class="fas fa-moon"></i> Minimum Nights: <strong>5</strong></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><i class="fas fa-arrow-right"></i> Check in: <strong>3PM</strong></li>
+        <li><i class="fas fa-arrow-left"></i> Check out: <strong>11AM</strong></li>
+      </ul>
+    </div>
+  </div>
 </div>
